# RootQR

./: .gitignore  README.md  install_rootqr.sh  pyproject.toml  uninstall_rootqr.sh
scripts/: rootqr-wrapper.sh  rootqr_install.sh  rootqr_uninstall.sh
src/: database.py  main.py
