[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "RootQR"
version = "0.1.0"
description = "Generador de códigos QR con Python y Flet"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Jonás Antonio Reyes Casanova", email = "jonasreyes@yandex.com" }
]
dependencies = [
    "flet>=0.27.6",
    "qrcode>=7.4.2",
    "Pillow>=10.0.0"
]

[tool.flet]
org = "com.codevip"
product = "RootQR"
company = "CodeVip"
copyright = "Copyright (C) 2025 @JonasRoot"

[tool.flet.app]
path = "src"
assets = "src/assets"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flet = "^0.27.6"
qrcode = "^7.4.2"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "^0.27.6"}
